added Github repository link

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <div class="col-md-1"><button type="button" class="btn btn-primary" ng-click="setOperation(1)">-</button></div>
             <div class="col-md-1"><button type="button" class="btn btn-primary" ng-click="setOperation(2)">*</button></div>
         </div>
+
+        <p id="github">
+            View the Project on GitHub:
+            <a href="https://github.com/MCeddy/html5calculator">MCeddy/html5calculator</a>
+        </p>
     </div>
 </body>
 </html>
